Clipped text labels intermittently missing ellipses by Float properties #100784

Closed
opened 2022-09-02 22:50:11 +02:00 by Shmuel Israel · 6 comments

Blender Version
Broken: 3.4
Worked: -

Short description of error
There are no ellipses by node group parameters in all editors by unhidden values
image.png
2022-09-02 16-57-07.mp4

Exact steps for others to reproduce the error

**Blender Version** Broken: 3.4 Worked: - **Short description of error** There are no ellipses by node group parameters in all editors by unhidden values ![image.png](https://archive.blender.org/developer/F13464829/image.png) [2022-09-02 16-57-07.mp4](https://archive.blender.org/developer/F13453083/2022-09-02_16-57-07.mp4) **Exact steps for others to reproduce the error** - Open attached file [missing_ellipsis_bug.blend](https://archive.blender.org/developer/F13464847/missing_ellipsis_bug.blend)
Author

Added subscriber: @shmuel

Added subscriber: @shmuel
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report.
This is not limited for Node groups. Behavior is observable wherever property name is present in button.
Not an expert from this area but it looks like name is drawn under the actual UI property.

Thanks for the report. This is not limited for Node groups. Behavior is observable wherever property name is present in button. Not an expert from this area but it looks like name is drawn under the actual UI property.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm that when the text is inside the button the ellipsis don't show up:
image.png

This looks more like a design issue than a bug.
But I'm confirming it as a bug (for now) since I don't see any advantages in this design.

I can confirm that when the text is inside the button the ellipsis don't show up: ![image.png](https://archive.blender.org/developer/F13464829/image.png) This looks more like a design issue than a bug. But I'm confirming it as a bug (for now) since I don't see any advantages in this design.
Germano Cavalcante changed title from Clipped text labels intermittently missing ellipses by Node Groups parameters to Clipped text labels intermittently missing ellipses by Float properties 2022-09-07 15:33:49 +02:00
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:21:47 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-08 23:40:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100784
No description provided.