source/blender/editors/interface/interface_widgets.cc
@@ -1700,6 +1700,18 @@ static void ui_text_clip_right_label(const uiFontStyle *fstyle, uiBut *but, cons
   UI_fontstyle_set(fstyle);
 
   but->strwidth = BLF_width(fstyle->uifont_id, but->drawstr, sizeof(but->drawstr));
+
+  /* It already fits, do nothing. */
+  if (but->strwidth < okwidth) {
+    return;
+  }
+
+  const char sep[] = BLI_STR_UTF8_HORIZONTAL_ELLIPSIS;
+  const int sep_len = sizeof(sep) - 1;
+  const float sep_strwidth = BLF_width(fstyle->uifont_id, sep, sep_len + 1);
+
+  but->strwidth += sep_strwidth;
+
   but->ofs = 0;
 
   /* First shorten number-buttons eg,
@@ -1727,9 +1739,11 @@ static void ui_text_clip_right_label(const uiFontStyle *fstyle, uiBut *but, cons
       drawstr_len -= bytes;
       // BLI_assert(strlen(but->drawstr) == drawstr_len);
 
-      but->strwidth = BLF_width(
-          fstyle->uifont_id, but->drawstr + but->ofs, sizeof(but->drawstr) - but->ofs);
-      if (but->strwidth < 10) {
+      but->strwidth = BLF_width(fstyle->uifont_id,
+                                but->drawstr + but->ofs,
+                                sizeof(but->drawstr) - but->ofs) +
+                      sep_strwidth;
+      if (but->strwidth < sep_strwidth) {
         break;
       }
     }
@@ -1757,6 +1771,15 @@ static void ui_text_clip_right_label(const uiFontStyle *fstyle, uiBut *but, cons
                   but->ofs;
     but->strwidth = strwidth;
     but->drawstr[drawstr_len] = 0;
+  }
+
+  cpoin = strrchr(but->drawstr, ':');
+  if (cpoin && (cpoin - but->drawstr > 0) && (drawstr_len < (sizeof(but->drawstr) - sep_len))) {
+    /* We shortened the string but still have a colon, so insert ellipsis. */
+    memmove(cpoin + sep_len, cpoin, cpend - cpoin);
+    memcpy(cpoin, sep, sep_len);
+    but->strwidth = BLF_width(
+        fstyle->uifont_id, but->drawstr + but->ofs, sizeof(but->drawstr) - but->ofs);
   }
 }
 
